Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 </ol>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="autorzy" class="anchor" href="#autorzy" aria-hidden="true"><span class="octicon octicon-link"></span></a>Autorzy</h3>
 
-<p><a href="https://github.com/sobi3ch" class="user-mention">@sobi3ch</a></p>
+<p><a href="https://github.com/henkRW" class="user-mention">@henkRW</a> <a href="https://github.com/harijari" class="user-mention">@harijari</a> <a href="https://github.com/sobi3ch" class="user-mention">@sobi3ch</a></p>
         </section>
 
         <aside id="sidebar">
