Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>FoodCoopSystem</h1>
-        <h2>Implementation of Food Coop System github page.</h2>
+        <h2>Przyjazny system wspomagania zamówień dla kooperatyw spożywczych oraz grup zakupowych</h2>
         <a href="https://github.com/FoodCoopSystem" class="button"><small>Follow me on</small> GitHub</a>
       </div>
     </header>
