--- a/test/index.html
+++ b/test/index.html
@@ -114,6 +114,7 @@
                         <div class="span12">
                             <a name="about"></a>
                             <h2>Czym jest FoodCoop System?</h2>
+                            <span class="subtext span12">To otwarty bezpłatny system wspomagania zamówień dla kooperatyw spożywczych oraz grup zakupowych.</span>
 <!--                            <h1>About the Author or Blog</h1>
 
 <p>Here is a little information about the author or the blog.</p>
