--- a/test/index.html
+++ b/test/index.html
@@ -33,7 +33,7 @@
                                     <li><a href="/#about">Czym jest FCS?</a></li>
                                     <li><a href="/#how-it-works">Jak to działa?</a></li>
                                     <li><a href="/#help">Jak nam pomóc?</a></li>
-<!--                                    <li><a href="/#news">Co nowego?</a></li>-->
+                                    <!--                                    <li><a href="/#news">Co nowego?</a></li>-->
                                     <li><a href="/#about-us">Nasz zespół</a></li>
                                 </ul>
                                 <ul class="social-icon">
@@ -88,10 +88,10 @@
                             <h3 u="text" >Budowanie demokratycznego społeczeństwa przez kolektywne działanie.</h3>
                             <img u="image" src2="/images/banner3.jpg" />
                         </div>
-                         <div>
-                             <span class="background-layer"></span>
-                             <span class="logo-banner" ></span>
-                             <h3 u="text" >Dostęp do produktów bezpośrednio od rolników i producentów.</h3>
+                        <div>
+                            <span class="background-layer"></span>
+                            <span class="logo-banner" ></span>
+                            <h3 u="text" >Dostęp do produktów bezpośrednio od rolników i producentów.</h3>
                             <img u="image" src2="/images/banner4.jpg" />
                         </div>
                     </div>
@@ -117,58 +117,115 @@
                             <span class="subtext span12">To otwarty bezpłatny system wspomagania zamówień dla kooperatyw spożywczych oraz grup 
                                 zakupowych.
                             </span>
-                       </div>
-                            <div class=" col1 span4"><h4>Czym jest FoodCoop System?</h4><p>Food Co-op system jest darmowym oprogramowaniem z 
-                                    otwartym kodem źródłowym. Jest tak, gdyż wierzymy, że jest to dobro wspólne, które może przyczynić się do 
-                                    istotnej zmiany społecznej. Chcemy sprawić aby możliwość zakupu zdrowej żywności prosto od rolnika stała się 
-                                    bardziej powszechna i cenowo dostępna dla każdego. Mamy nadzieję, że system będzie pożytecznym narzędziem 
-                                    usprawniającym działanie kooperatyw spożywczych i grup zakupowych, tak aby mogły się one szybciej rozwijać i 
-                                    aby stale przybywało nowych.</p>
-                            </div>
-                            <div class=" col2 span4"><h4>Do kogo jest skierowany</h4><p>FoodCoop skierowany jest dla kooperatyw spożywczych i 
-                                    grup zakupowych z Polski, dostępna też będzie angielska wersja systemu. Jeżeli prowadzisz kooperatywe i 
-                                    używaćie zeszytu, excela lub podobnego narzedzia (albo miksu tych wariantów) waszym rozwiązaniem jest 
-                                    wdrożenie systemu FoodCoop, który wprowadzi zunifikowane i jednolite zarządzanie wszystkimi zamówieniami w 
-                                    kooperatywie.</p>
-                            </div>
-                            <div class=" col3 span4"><h4>Idea projektu</h4><p>System rozwijany jest społecznie, częściowo przez wolontariuszy ale też przez 
-                                    opłacaną pracę z różnego rodzaju dofinansowań i zbiórek. Pomoc użytkowników i finanse są niezbędne 
-                                    by system działał lepiej. Każdy może właczyć się do tworzenia systemu nawet gdy nie posiada umiejętności 
-                                    technicznych czy środków finansowych. To dobro wspólne za rozwój którego wszyscy jesteśmy odpowiedzialni!</p>
-                            </div>
+
                         </div>
-                        <div class="row-fluid">
-                            <a name="help"></a>
-                            <h2>Jak możesz nam pomóc?</h2>
-                            <span class="subtext span12">To otwarty bezpłatny system wspomagania zamówień dla kooperatyw spożywczych oraz grup 
-                                zakupowych.
-                            </span>
-                            <div class=" col1 span4"><h4>Udział w zbiórce pieniędzy</h4><p>Food Co-op system jest darmowym oprogramowaniem z 
-                                    otwartym kodem źródłowym. Jest tak, gdyż wierzymy, że jest to dobro wspólne, które może przyczynić się do 
-                                    istotnej zmiany społecznej. Chcemy sprawić aby możliwość zakupu zdrowej żywności prosto od rolnika stała się 
-                                    bardziej powszechna i cenowo dostępna dla każdego. Mamy nadzieję, że system będzie pożytecznym narzędziem 
-                                    usprawniającym działanie kooperatyw spożywczych i grup zakupowych, tak aby mogły się one szybciej rozwijać i 
-                                    aby stale przybywało nowych.</p>
-                            </div>
-                            <div class=" col2 span4"><h4>Promocja w mediach społecznościowych</h4><p>FoodCoop skierowany jest dla kooperatyw spożywczych i 
-                                    grup zakupowych z Polski, dostępna też będzie angielska wersja systemu. Jeżeli prowadzisz kooperatywe i 
-                                    używaćie zeszytu, excela lub podobnego narzedzia (albo miksu tych wariantów) waszym rozwiązaniem jest 
-                                    wdrożenie systemu FoodCoop, który wprowadzi zunifikowane i jednolite zarządzanie wszystkimi zamówieniami w 
-                                    kooperatywie.</p>
-                            </div>
-                            <div class=" col3 span4"><h4>Udział w rozwoju projektu na GitHUB</h4><p>System rozwijany jest społecznie, częściowo przez wolontariuszy ale też przez 
-                                    opłacaną pracę z różnego rodzaju dofinansowań i zbiórek. Pomoc użytkowników i finanse są niezbędne 
-                                    by system działał lepiej. Każdy może właczyć się do tworzenia systemu nawet gdy nie posiada umiejętności 
-                                    technicznych czy środków finansowych. To dobro wspólne za rozwój którego wszyscy jesteśmy odpowiedzialni!</p>
-                            </div>
-                            
+                    </div>
+                    <div class="row-fluid">
+                        <div class=" col1 span4"><h4>Czym jest FoodCoop System?</h4><p>Food Co-op system jest darmowym oprogramowaniem z 
+                                otwartym kodem źródłowym. Jest tak, gdyż wierzymy, że jest to dobro wspólne, które może przyczynić się do 
+                                istotnej zmiany społecznej. Chcemy sprawić aby możliwość zakupu zdrowej żywności prosto od rolnika stała się 
+                                bardziej powszechna i cenowo dostępna dla każdego. Mamy nadzieję, że system będzie pożytecznym narzędziem 
+                                usprawniającym działanie kooperatyw spożywczych i grup zakupowych, tak aby mogły się one szybciej rozwijać i 
+                                aby stale przybywało nowych.</p>
                         </div>
-                        
-<!--                            <h1>About the Author or Blog</h1>
+                        <div class=" col2 span4"><h4>Do kogo jest skierowany</h4><p>FoodCoop skierowany jest dla kooperatyw spożywczych i 
+                                grup zakupowych z Polski, dostępna też będzie angielska wersja systemu. Jeżeli prowadzisz kooperatywe i 
+                                używaćie zeszytu, excela lub podobnego narzedzia (albo miksu tych wariantów) waszym rozwiązaniem jest 
+                                wdrożenie systemu FoodCoop, który wprowadzi zunifikowane i jednolite zarządzanie wszystkimi zamówieniami w 
+                                kooperatywie.</p>
+                        </div>
+                        <div class=" col3 span4"><h4>Idea projektu</h4><p>System rozwijany jest społecznie, częściowo przez wolontariuszy ale też przez 
+                                opłacaną pracę z różnego rodzaju dofinansowań i zbiórek. Pomoc użytkowników i finanse są niezbędne 
+                                by system działał lepiej. Każdy może właczyć się do tworzenia systemu nawet gdy nie posiada umiejętności 
+                                technicznych czy środków finansowych. To dobro wspólne za rozwój którego wszyscy jesteśmy odpowiedzialni!</p>
+                        </div>
+                    </div>
+                    <div class="row-fluid">
+                        <a name="help"></a>
+                        <h2>Jak możesz nam pomóc?</h2>
+                        <span class="subtext span12">To otwarty bezpłatny system wspomagania zamówień dla kooperatyw spożywczych oraz grup 
+                            zakupowych.
+                        </span>
+                    </div>
+                    <div class="row-fluid">
+                        <div class=" col1 span4"><h4>Udział w zbiórce pieniędzy</h4><p>Food Co-op system jest darmowym oprogramowaniem z 
+                                otwartym kodem źródłowym. Jest tak, gdyż wierzymy, że jest to dobro wspólne, które może przyczynić się do 
+                                istotnej zmiany społecznej. Chcemy sprawić aby możliwość zakupu zdrowej żywności prosto od rolnika stała się 
+                                bardziej powszechna i cenowo dostępna dla każdego. Mamy nadzieję, że system będzie pożytecznym narzędziem 
+                                usprawniającym działanie kooperatyw spożywczych i grup zakupowych, tak aby mogły się one szybciej rozwijać i 
+                                aby stale przybywało nowych.</p>
+                        </div>
+                        <div class=" col2 span4"><h4>Promocja w mediach społecznościowych</h4><p>FoodCoop skierowany jest dla kooperatyw spożywczych i 
+                                grup zakupowych z Polski, dostępna też będzie angielska wersja systemu. Jeżeli prowadzisz kooperatywe i 
+                                używaćie zeszytu, excela lub podobnego narzedzia (albo miksu tych wariantów) waszym rozwiązaniem jest 
+                                wdrożenie systemu FoodCoop, który wprowadzi zunifikowane i jednolite zarządzanie wszystkimi zamówieniami w 
+                                kooperatywie.</p>
+                        </div>
+                        <div class=" col3 span4"><h4>Udział w rozwoju projektu na GitHUB</h4><p>System rozwijany jest społecznie, częściowo przez wolontariuszy ale też przez 
+                                opłacaną pracę z różnego rodzaju dofinansowań i zbiórek. Pomoc użytkowników i finanse są niezbędne 
+                                by system działał lepiej. Każdy może właczyć się do tworzenia systemu nawet gdy nie posiada umiejętności 
+                                technicznych czy środków finansowych. To dobro wspólne za rozwój którego wszyscy jesteśmy odpowiedzialni!</p>
+                        </div>
+
+                    </div>
+
+                    <div class="row-fluid">
+                        <a name="about-us"></a>
+                        <h2>Nasz zespół</h2>
+                        <span class="subtext span12">
+                            Poznaj nasz zespół...
+                        </span>
+                    </div>
+                    <div class="row-fluid">
+                        <div class="span3"><img src="" /><p>Food Co-op system jest darmowym oprogramowaniem z 
+                                otwartym kodem źródłowym. Jest tak, gdyż wierzymy, że jest to dobro wspólne, które może przyczynić się do 
+                                istotnej zmiany społecznej. Chcemy sprawić aby możliwość zakupu zdrowej żywności prosto od rolnika stała się 
+                                bardziej powszechna i cenowo dostępna dla każdego. Mamy nadzieję, że system będzie pożytecznym narzędziem 
+                                usprawniającym działanie kooperatyw spożywczych i grup zakupowych, tak aby mogły się one szybciej rozwijać i 
+                                aby stale przybywało nowych.</p>
+                        </div>
+                        <div class="span3"><img src="" /><p>Food Co-op system jest darmowym oprogramowaniem z 
+                                otwartym kodem źródłowym. Jest tak, gdyż wierzymy, że jest to dobro wspólne, które może przyczynić się do 
+                                istotnej zmiany społecznej. Chcemy sprawić aby możliwość zakupu zdrowej żywności prosto od rolnika stała się 
+                                bardziej powszechna i cenowo dostępna dla każdego. Mamy nadzieję, że system będzie pożytecznym narzędziem 
+                                usprawniającym działanie kooperatyw spożywczych i grup zakupowych, tak aby mogły się one szybciej rozwijać i 
+                                aby stale przybywało nowych.</p>
+                        </div>
+                        <div class="span3"><img src="" /><p>Food Co-op system jest darmowym oprogramowaniem z 
+                                otwartym kodem źródłowym. Jest tak, gdyż wierzymy, że jest to dobro wspólne, które może przyczynić się do 
+                                istotnej zmiany społecznej. Chcemy sprawić aby możliwość zakupu zdrowej żywności prosto od rolnika stała się 
+                                bardziej powszechna i cenowo dostępna dla każdego. Mamy nadzieję, że system będzie pożytecznym narzędziem 
+                                usprawniającym działanie kooperatyw spożywczych i grup zakupowych, tak aby mogły się one szybciej rozwijać i 
+                                aby stale przybywało nowych.</p>
+                        </div>
+                        <div class="span3"><img src="" /><p>Food Co-op system jest darmowym oprogramowaniem z 
+                                otwartym kodem źródłowym. Jest tak, gdyż wierzymy, że jest to dobro wspólne, które może przyczynić się do 
+                                istotnej zmiany społecznej. Chcemy sprawić aby możliwość zakupu zdrowej żywności prosto od rolnika stała się 
+                                bardziej powszechna i cenowo dostępna dla każdego. Mamy nadzieję, że system będzie pożytecznym narzędziem 
+                                usprawniającym działanie kooperatyw spożywczych i grup zakupowych, tak aby mogły się one szybciej rozwijać i 
+                                aby stale przybywało nowych.</p>
+                        </div>
+                        <div class="span3"><img src="" /><p>Food Co-op system jest darmowym oprogramowaniem z 
+                                otwartym kodem źródłowym. Jest tak, gdyż wierzymy, że jest to dobro wspólne, które może przyczynić się do 
+                                istotnej zmiany społecznej. Chcemy sprawić aby możliwość zakupu zdrowej żywności prosto od rolnika stała się 
+                                bardziej powszechna i cenowo dostępna dla każdego. Mamy nadzieję, że system będzie pożytecznym narzędziem 
+                                usprawniającym działanie kooperatyw spożywczych i grup zakupowych, tak aby mogły się one szybciej rozwijać i 
+                                aby stale przybywało nowych.</p>
+                        </div>
+                        <div class="span3"><img src="" /><p>Food Co-op system jest darmowym oprogramowaniem z 
+                                otwartym kodem źródłowym. Jest tak, gdyż wierzymy, że jest to dobro wspólne, które może przyczynić się do 
+                                istotnej zmiany społecznej. Chcemy sprawić aby możliwość zakupu zdrowej żywności prosto od rolnika stała się 
+                                bardziej powszechna i cenowo dostępna dla każdego. Mamy nadzieję, że system będzie pożytecznym narzędziem 
+                                usprawniającym działanie kooperatyw spożywczych i grup zakupowych, tak aby mogły się one szybciej rozwijać i 
+                                aby stale przybywało nowych.</p>
+                        </div>
+                    </div>
+
+                    <!--                            <h1>About the Author or Blog</h1>
 
 <p>Here is a little information about the author or the blog.</p>
 -->
-                    </div>
+                </div>
                 <div class="push"></div>
             </div>
             <footer class="container">
