--- a/test/index.html
+++ b/test/index.html
@@ -27,7 +27,7 @@
                         <div class="container-fluid">
                             <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
                             </a>
-                            <a class="brand" href="/"><img src="/images/logo.png" alt="FoodCoop System"/></a>
+                            <a class="brand" href="/#home"><img src="/images/logo.png" alt="FoodCoop System"/></a>
                             <div class="nav-collapse collapse">
                                 <ul class="nav">
                                     <li><a href="/#about">Czym jest FCS?</a></li>
@@ -50,6 +50,7 @@
                 </div>
             </header>
             <div class="container">
+              <a name="home"></a>
                 <h1 style="display: none;">FoodCoop System - System zamówień dla kooperatyw spożywczych i grup zakupowych.</h1>
                 <!-- Jssor Slider Begin -->
                 <!-- ================================================== -->
