--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ something:
                         <a name="about-team"></a>
                         <h2>Nasz zespół</h2>
                         <span class="subtext span12">
-                            
+                           Mamy różne doświadczenia i specjalizację, łaczy nas chęć stworzenia otwartego oprogramowania dla kooperatyw.
                         </span>
                     </div>
                     
@@ -239,8 +239,6 @@ something:
                             <p>Jestem wieloletnim programistom aplikacji internetowych, głównie bazujących na Drupalu. Wraz z Karolem jestem członkiem kooperatywy Ratio Web.
                                 Jestem fanem rozwiązań open source, zwłaszcza takich które w pozytywny sposób wpływają na zmiany w życiu ludzi, 
                                 a takim projektem jest właśnie FoodCoop System!
-
-
                             </p>
                           </div>
                         </div>
@@ -297,7 +295,7 @@ something:
             </article>
 -->
                 </div>
-                <div class="push"></div>
+<!--                <div class="push"></div>-->
             </div>
             <footer class="container">
                 &copy; 2015 FoodCoop System
