--- a/index.html
+++ b/index.html
@@ -298,12 +298,17 @@ something:
 <!--                <div class="push"></div>-->
             </div>
             <footer class="container">
+                <div class="copy">
                 &copy; 2015 FoodCoop System
+                </div>
+                <aside class="span8">
+                <h2 class="span4"> Znajdziesz nas tu: </h2>
                 <ul class="sovial-icon">
-                    <li class="facebook"><a target="_blank" rel="nofolow"  href="https://www.facebook.com/foodcoopsystem">Facebook</a></li>
-                    <li class="twitter"><a target="_blank" rel="nofolow"  href="https://twitter.com/foodcoopsystem">Facebook</a></li>
-                    <li class="google"><a target="_blank" rel="nofolow"  href="https://plus.google.com/u/0/b/117350059508672336819/117350059508672336819/about">Google +</a></li>
+                    <li class="facebook span1"><a target="_blank" rel="nofolow"  href="https://www.facebook.com/foodcoopsystem">Facebook</a></li>
+                    <li class="twitter span1"><a target="_blank" rel="nofolow"  href="https://twitter.com/foodcoopsystem">Facebook</a></li>
+                    <li class="google span1"><a target="_blank" rel="nofolow"  href="https://plus.google.com/u/0/b/117350059508672336819/117350059508672336819/about">Google +</a></li>
                 </ul>
+                </aside>
             </footer>
 
             <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
