about system slider text

--- a/index.html
+++ b/index.html
@@ -159,29 +159,62 @@
                         </div>
                     </div>
                     <!-- Slides Container -->
-                    <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 650px; height: 550px; overflow: hidden;">
+                    <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 1300px; height: 550px; overflow: hidden;">
                         <div>
-                            <img u="image" src2="/images/cechy_01.jpg" />
-                        </div>
-                        <div>
-                            <img u="image" src2="/images/cechy_02.jpg" />
-                        </div>
-                        <div>
-                            <img u="image" src2="/images/cechy_03.jpg" />
-                        </div>
-                    </div>
-                    <div u="slides" class="data" style="cursor: move; position: absolute; left: 650px; top: 0px; width: 650px; height: 550px; overflow: hidden;">
-                        <div>
-                            <h2  u="text" >Organizacja grupowych zakupów.</h2>
-                        </div>  
-                        <div>
-                            <h2  u="text" >Zarządzanie zakupami</h2>
-                        </div>  
+                            <span>
+                                <img class="half" u="image" src2="/images/cechy_01.jpg" />
+                            </span>
+                            <div class="data half">
+                                <image alt="Group buying" src="/images/icon_04.png" />
+                                <h2>Organizacja grupowych zakupów.</h2>
+                                <h5>Funkcje systemu</h5>
+                                <ul>
+                                    <li>Składanie zamówień online</li> 
+                                    <li>Rozliczanie złożonych zamówień</li>
+                                    <li>Zamówianie produktów na sztuki, kilogramy (min. 100 gram)  </li>
+                                    <li>Grupowanie produktów w paczki </li>
+                                    <li>Możliwość płatnosci online  </li>
 
+                                </ul>
+                            </div>    
+                        </div>
                         <div>
-                            <h2  u="text" >Zamawiaj, zarządzaj i rozliczaj bez dostępu do komputera</h2>
-                        </div>  
+                            <span>
+                                <img class="half" u="image" src2="/images/cechy_02.jpg" />
+                            </span>
+                            <div class="data  half">
+                                <image alt="Administration" src="/images/icon_05.png" />
+                                <h2>Zarządzanie zakupami</h2>
+                                <h5>Funkcje systemu</h5>
+                                <ul>
+                                    <li>Szybka edycja dostępnej oferty</li>
+                                    <li>Prowadzenie magazynu i aktualizacja stanów magazynowaych</li>
+                                    <li>Wysyłanie zamówień do Rolnika/Dostawcy online</li>
+                                    <li>Historia zakupów kooperatywy/ grupy zakupowej, raporty</li>
+                                    <li>Obliczanie składek na fundusz gromadzki</li>
 
+                                </ul>
+                            </div>
+                        </div>
+                        <div>
+                            <span>
+                                <img class="half" u="image" src2="/images/cechy_03.jpg" />
+                            </span>
+                            <div class="data half">
+                                <image alt="Mobility" src="/images/icon_05.png" />
+                                <h2>Zamawiaj, zarządzaj i rozliczaj bez dostępu do komputera</h2>
+                                <h5>Funkcje systemu</h5>
+                                <ul>
+                                    <li>Możliwość wydruku list zamówionych produktów:
+                                    <ul>
+                                            <li>Listy produktów grupowane po osobie,</li>
+                                            <li>Listy do zamówienia grupowane do produkcie,</li>
+                                            <li>Listy produktów grupowane po dostawcy,</li></ul></li>
+                                    <li>Dostępność systemu na urządzeniach mobilnych</li>
+
+                                </ul>
+                            </div>  
+                        </div>
                     </div>
 
                     <!-- bullet navigator container -->
@@ -372,11 +405,11 @@
                         &copy; 2015 FoodCoop System
                     </div>
                     <aside class="span7">
-                        <h2 class="span4"> Znajdziesz nas tu: </h2>
+                        <h2 class="span6"> Znajdziesz nas tu: </h2>
                         <ul class="sovial-icon">
-                            <li class="facebook span1"><a target="_blank" rel="nofolow"  href="https://www.facebook.com/foodcoopsystem">Facebook</a></li>
-                            <li class="twitter span1"><a target="_blank" rel="nofolow"  href="https://twitter.com/foodcoopsystem">Facebook</a></li>
-                            <li class="google span1"><a target="_blank" rel="nofolow"  href="https://plus.google.com/u/0/b/117350059508672336819/117350059508672336819/about">Google +</a></li>
+                            <li class="facebook span2"><a target="_blank" rel="nofolow"  href="https://www.facebook.com/foodcoopsystem">Facebook</a></li>
+                            <li class="twitter span2"><a target="_blank" rel="nofolow"  href="https://twitter.com/foodcoopsystem">Facebook</a></li>
+                            <li class="google span2"><a target="_blank" rel="nofolow"  href="https://plus.google.com/u/0/b/117350059508672336819/117350059508672336819/about">Google +</a></li>
                         </ul>
                     </aside>
                 </div>
