--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                                 łatwe w obsłudzie oprogramowanie. Cześć z nas pracuje nad projektem społecznie, ale potrzebujemy Twojego wsparcia 
                                 finansowego aby opłacić pracę doświadoczonych informatyków. Dzięki stałemu finansowaniu będą oni mogli skupić się wyłacznie 
                                 na pracy nad projektam, co zapewni jego realizację w stosunkowo krótkim czasie.</p>
-                            <p>Wesprzyj nas na polak potrafi (już za chwilę ruszy nasz kampania)!</p>
+                            <p>Wesprzyj nas na polak potrafi <br/> (już za chwilę ruszy nasz kampania)!</p>
                         </div>
                         <div class="col2 span4 help"><h4>Promocja w mediach społecznościowych</h4><p>Promój projekt w mediach społecznościowych: twitter, facebook, g+ - 
                                 Im więcej osob wie o naszym projekcie, tym ma on większe szanse na szybką realizację. Pomórz nam promować projekt wśród znajomych i 
