--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Home &mdash; FoodCoop System &mdash; </title>
+        <title>Home Page &mdash; FoodCoop System &mdash; </title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="/components/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -76,18 +76,18 @@
                             <!--                            <span class="background-layer"></span>-->
                             <span class="logo-banner" ></span>
                             <h3 u="text" >Zdrowe warzywa od lokalnych rolników w dobrej cenie.</h3>
-                            <img u="image" src2="/images/baner_img_01.jpg" />
+                            <img u="image" src2="/images/baner_img_01-t.jpg" />
                         </div>
                         <div>
                             <!--                            <span class="background-layer"></span>-->
                             <h3 u="text" >Przyjazny system do wspomagania zamówień dla kooperatyw spożywczych i grup zakupowych.</h3>
-                            <img u="image" src2="/images/baner_img_02.jpg" />
+                            <img u="image" src2="/images/baner_img_02-t.jpg" />
                         </div>
                         <div>
                             <!--                            <span class="background-layer"></span>-->
                             <span class="logo-banner" ></span>
                             <h3 u="text" >Budowanie demokratycznego społeczeństwa przez kolektywne działanie.</h3>
-                            <img u="image" src2="/images/baner_img_03.jpg" />
+                            <img u="image" src2="/images/baner_img_03-t.jpg" />
                         </div>
                     </div>
 
@@ -156,7 +156,7 @@
                         <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 1300px; height: 550px; overflow: hidden;">
                             <div>
                                 <span>
-                                    <img class="half" u="image" src2="/images/cechy_01.jpg" />
+                                    <img class="half" u="image" src2="/images/cechy_01-t.jpg" />
                                 </span>
                                 <div class="data half">
                                     <image alt="Group buying" src="/images/icon_04.png" />
@@ -174,7 +174,7 @@
                             </div>
                             <div>
                                 <span>
-                                    <img class="half" u="image" src2="/images/cechy_02.jpg" />
+                                    <img class="half" u="image" src2="/images/cechy_02-t.jpg" />
                                 </span>
                                 <div class="data  half">
                                     <image alt="Administration" src="/images/icon_05.png" />
@@ -192,7 +192,7 @@
                             </div>
                             <div>
                                 <span>
-                                    <img class="half" u="image" src2="/images/cechy_03.jpg" />
+                                    <img class="half" u="image" src2="/images/cechy_03-t.jpg" />
                                 </span>
                                 <div class="data half">
                                     <image alt="Mobility" src="/images/icon_06.png" />
@@ -420,8 +420,7 @@
                         
                         <script src="/components/highlightjs/highlight.pack.js"></script>
             <script src="/js/slider/jssor.slider.mini.js"></script>
-            <script src="/js/slider/slider.js"></script>
-            <script src="/js/global.js"></script>
+            <script src="/js/foodcoop-page.min.js"></script>
             <script>hljs.initHighlightingOnLoad();</script>
     </body>
 </html>
