--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     </div>
                 </div>
             </header>
-            <div class="container">
-                <a name="home"></a>
+            <a name="home"></a>
+            <div class="container">  
                 <h1 style="display: none;">FoodCoop System - System zamówień dla kooperatyw spożywczych i grup zakupowych.</h1>
                 <!-- Jssor Slider Begin -->
                 <!-- ================================================== -->
@@ -103,11 +103,11 @@
 
                 <!-- Jssor Slider End -->
             </div>
+            <a name="about-system"></a>
             <div class="container">
                 <div class="mainContent">
                     <div class="row-fluid">
                         <div class="span12">
-                            <a name="about-system"></a>
                             <h2>Czym jest FoodCoop System?</h2>
                             <span class="subtext span12">
                                 To otwarty i bezpłatny system wspomagania zamówień dla kooperatyw spożywczych oraz grup zakupowych.
@@ -116,22 +116,22 @@
                         </div>
                     </div>
                     <div class="row-fluid about">
-                        <div class="col1 span4"><h4>Czym jest FoodCoop System?</h4><p>FoodCoop System to bezpłatny, oparty na idei Open Source 
-                                system służący do składania i rozliczania zamówień oraz ułatwiający organizację kooperatyw spożywczych i realizację 
-                                grupowych zakupów. Ma on także za zadanie wspierać lokalne rolnictwo poprzez popularyzację zakupów 
-                                lokalnych i sprawdzonych produktów rolniczych przez zorganizowane grupy konsumentów. 
-                                System umożliwi także dostęp konsumentom z miast do produktów lepszej jakości.</p>
+                        <div class="col1 span4"><h4>Czym jest FoodCoop System?</h4><p>FoodCoop System to bezpłatny, oparty na idei 
+                                Open Source system służący do składania i rozliczania zamówień oraz ułatwiający organizację 
+                                kooperatyw spożywczych i realizację grupowych zakupów. Ma on także za zadanie wspierać lokalne 
+                                rolnictwo poprzez popularyzację zakupów lokalnych i sprawdzonych produktów rolniczych przez zorganizowane 
+                                grupy konsumentów. System ułatwia także dostęp konsumentom z miast do produktów lepszej jakości.</p>
                         </div>
-                        <div class="col2 span4"><h4>Do kogo jest skierowany</h4><p>FoodCoop System skierowany jest dla kooperatyw spożywczych 
-                                oraz grup zakupowych z Polski jak również z poza kraju dlatego dostępna  będzie polska i angielska wersja systemu. 
-                                Jeżeli prowadzisz kooperatywę i używacie zeszytu, excela lub podobnego narzędzia (albo miksu tych wariantów) 
-                                waszym rozwiązaniem na wszelkie problemy będzie wdrożenie systemu FoodCoop. Zapewni on zunifikowane i jednolite 
+                        <div class="col2 span4"><h4>Do kogo jest skierowany</h4><p>FoodCoop System skierowany jest do grup konsumenckich 
+                                (kooperatyw spożywczych, grup zakupowych i podobnych inicjatyw) z Polski jak również z poza kraju dlatego 
+                                dostępna będzie polska i angielska wersja systemu. Jeżeli  np. prowadzisz kooperatywę i używacie zeszytu, excela lub podobnego narzędzia 
+                                (albo miksu tych wariantów) waszym dobrym rozwiązaniem dla Was będzie wdrożenie systemu FoodCoop. Zapewni on zunifikowane i jednolite 
                                 zarządzanie wszystkimi zamówieniami.</p>
                         </div>
-                        <div class="col3 span4"><h4>Idea projektu</h4><p>System rozwijany jest społecznie, częściowo przez wolontariuszy ale też przez 
-                                opłacaną pracę z różnego rodzaju dofinansowań i zbiórek. Pomoc użytkowników i finanse są niezbędne 
-                                by system działał lepiej. Każdy może właczyć się do tworzenia systemu nawet gdy nie posiada umiejętności 
-                                technicznych czy środków finansowych. To dobro wspólne za rozwój którego wszyscy jesteśmy odpowiedzialni!</p>
+                        <div class="col3 span4"><h4>Idea projektu</h4><p>FCS jest udostępniony publicznie i ma otwarty kod źródłowy. Jest tak, gdyż wierzymy,
+                                że jest on dobrem wspólnym, które może przyczynić się do istotnej zmiany tego jak robimy zakupy. 
+                                Chcemy sprawić aby możliwość zakupu zdrowej żywności prosto od rolnika stała się bardziej powszechna i cenowo dostępna dla każdego. 
+                                Mamy nadzieję, że system będzie pożytecznym narzędziem usprawniającym działanie grup prowadzących zorganizowane zakupy prosto od rolnika.</p>
                         </div>
                     </div>
 
@@ -139,8 +139,8 @@
                 <!-- Jssor Slider Begin -->
                 <!-- You can move inline styles to css file or css block. -->
                 <!-- ================================================== -->
+                <a name="how-it-works"></a>
                 <div class="container">
-                    <a name="how-it-works"></a>
                     <div id="slider2" style="display: none; position: relative; margin: 0 auto;
                          top: 0px; left: 0px; width: 2032px; height: 928px; overflow: hidden;">
                         <!-- Loading Screen -->
@@ -233,20 +233,18 @@
                         <a name="help"></a>
                         <h2>Jak możesz nam pomóc?</h2>
                         <span class="subtext span12">
-                            Ideą FoodCoop System jest popularyzacja kooperatyw spożywczych, dlatego chcemy by pozostał darmowy i dostępny dla każdego.
-                            <br/>To dobro wspólne za rozwój którego wszyscy jesteśmy odpowiedzialni.
+                            Ideą FoodCoop System jest popularyzacja grupowych zakupów prosto od rolników, dlatego chcemy by pozostał darmowy i dostępny dla każdego.
+                            <br/>
+                            To dobro wspólne, którego rozwój przyniesie korzyść nam wszystkim.
                         </span>
                     </div>
                     <div class="row-fluid">
-                        <div class="col1 span4 help"><h4>Udział w zbiórce pieniędzy</h4><p>Chcemy stworzyć  bezpłatne ale też nowoczesne i profesjonalne oprogramowanie. 
-                                Cześć z nas pracuje nad projektem społecznie jednak potrzebujemy Twojego wsparcia aby opłacić pracę doświadczonych specjalistów. 
-                                Zapewni to realizację projektu na wysokim poziomie w stosunkowo krótkim czasie.</p> 
-                                <p>Wesprzyj nas finansowo na polak potrafi (już niebawem ruszy nasza kampania)!</p>
+                        <div class="col1 span4 help"><h4> Udział w zbiórce pieniędzy</h4><p>Chcemy stworzyć  bezpłatne ale też nowoczesne i profesjonalne oprogramowanie. Cześć z nas pracuje nad projektem społecznie jednak potrzebujemy Twojego wsparcia aby opłacić pracę doświadczonych specjalistów. Zapewni to realizację projektu na wysokim poziomie w stosunkowo krótkim czasie. 
+                                </p> <p>Wesprzyj nas finansowo na polak potrafi (już niebawem ruszy nasza kampania)!</p> 
                         </div>
-                        <div class="col2 span4 help"><h4>Promocja w mediach społecznościowych</h4><p>Pomóż nam promować FoodCoop System wśród znajomych. 
-                                Polub naszą stronę na Facebooku, Google+, Twitterze i poleć ją swoim znajomym. Im więcej osób dowie się o naszym projekcie, 
-                                tym większa szansa na jego szybką realizację. Masz znajomych w mediach? Poinformuj ich o naszym projekcie i dostarcz im tym 
-                                samym ciekawego tematu na tekst lub reportaż.</p>
+                        <div class="col2 span4 help"><h4>Promocja w mediach społecznościowych</h4><p>Pomóż nam promować FoodCoop System wśród znajomych. Polub naszą stronę na Facebooku, 
+                                Google+, Twitterze i poleć ją swoim znajomym. Im więcej osób dowie się o naszym projekcie, tym większa szansa na jego szybką realizację. 
+                                Masz znajomych w mediach? Poinformuj ich o naszym projekcie i dostarcz im tym samym ciekawego tematu na tekst lub reportaż.</p>
                         </div>
                         <div class="col3 span4 help"><h4>Udział w rozwoju projektu na GitHUB</h4><p>System napisany jest w języku PHP i oparty jest o platformę 
                                 Drupal Commerce. Praca nad nim jest dostępna publicznie i każdy może zgłaszać błędy lub dodawać własne propozycję. 
@@ -297,13 +295,13 @@
 
                 <div class="team-wrapper">
                     <!-- NAS ZESPOL -->
+                    <a name="about-team"></a>
                     <div class="mainContent">
-                        <div class="row-fluid team">
-                            <a name="about-team"></a>
+                        <div class="row-fluid team">   
                             <h2>Nasz zespół</h2>
                             <span class="subtext span12">
-                                Mamy różne doświadczenia i specjalizację. Łączy nas chęć stworzenia otwartego oprogramowania dla popularyzacja 
-                                idei kooperatyw spożywczych i umożliwienie łatwego dostępu do zdrowej żywności bezpośrednio od lokalnych rolników.
+Mamy różne doświadczenia i specjalizację. Łączy nas chęć stworzenia otwartego oprogramowania oraz popularyzacja idei 
+kooperatyw spożywczych i umożliwienie łatwego dostępu do zdrowej żywności bezpośrednio od lokalnych rolników.              
                             </span>
                         </div>
                         <div class="container-fluid team-list">
