--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <![endif]-->
         <link rel="stylesheet" href="/components/highlightjs/styles/github.css" />
         <link rel="alternate" type="application/atom+xml" href="/atom.xml" title="FoodCoop System activity feed" />
+        <meta property="og:title" content="FoodCoop System - System zarządzania zamówieniami dla grup konsumenckich" />
+        <meta property="og:image" content="/images/facebook_bg_03.jpg" />
         <style>
             /** quick fix because bootstrap <pre> has a background-color. */
             pre code { background-color: inherit; }
