url and description

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         <link rel="stylesheet" href="/components/highlightjs/styles/github.css" />
         <link rel="alternate" type="application/atom+xml" href="/atom.xml" title="FoodCoop System activity feed" />
         <meta property="og:title" content="FoodCoop System - System zarządzania zamówieniami dla grup konsumenckich" />
+        <meta property="og:description" content="FoodCoop System to bezpłatny, oparty na idei 
+                                Open Source system służący do składania i rozliczania zamówień oraz ułatwiający organizację 
+                                kooperatyw spożywczych i realizację grupowych zakupów. Ma on także za zadanie wspierać lokalne 
+                                rolnictwo poprzez popularyzację zakupów lokalnych i sprawdzonych produktów rolniczych przez zorganizowane 
+                                grupy konsumentów." />
+        <meta property="og:url" content="http://www.foodcoop.pl/" />
         <meta property="og:image" content="http://www.foodcoop.pl/images/facebook_bg_03.jpg" />
         <style>
             /** quick fix because bootstrap <pre> has a background-color. */
